tests/error/modules_private/main.vibe
// ERROR: 'private_fn' is not public in module 'helper'
use .helper.private_fn

fn main() -> i32 {
    return private_fn()
}
